# nova

./: .gitignore  Dockerfile  LICENSE  README.md  launcher.py  pyproject.toml
.github/workflows/: build.yml
docs/: core.md  gw2.md
nova/: __init__.py  config.py  main.py
nova/core/: __init__.py  util.py
nova/extensions/: gw2.py  poll.py
nova/extensions/gw2/: __init__.py  client.py  format.py  report.py  team.py  types.py
nova/report/: __init__.py  client.py  types.py  util.py
tests/: test_config.py  test_report.py
tests/extensions/: test_gw2.py
